--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "ia02-photo-gallery",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://minen1712.github.io/ia02-photo-gallery",
+  "homepage": ".",
   "dependencies": {
     "@emotion/react": "^11.13.3",
     "@emotion/styled": "^11.13.0",
